# etc

100-days-of-python/: README.md
100-days-of-python/001/: README.md  pyproject.toml
100-days-of-python/001/src/: band_name_generator.py
100-days-of-python/002/: README.md  pyproject.toml
100-days-of-python/002/src/: tip_calculator.py
100-days-of-python/003/: README.md  pyproject.toml
100-days-of-python/003/src/: treasure_island.py
100-days-of-python/004/: README.md  pyproject.toml
100-days-of-python/004/src/: rock_paper_scissors.py
100-days-of-python/005/: README.md  pyproject.toml
100-days-of-python/005/src/: password_generator.py
100-days-of-python/006/: README.md
100-days-of-python/007/: README.md  pyproject.toml
100-days-of-python/007/src/hangman/: art.py  main.py  words.py
100-days-of-python/008/: README.md  pyproject.toml
100-days-of-python/008/src/caesar_cipher/: __main__.py  art.py  cipher.py  main.py
100-days-of-python/009/: README.md  pyproject.toml
100-days-of-python/009/src/blind_auction/: __main__.py  art.py  auctioneer.py  main.py
100-days-of-python/010/: README.md  pyproject.toml
100-days-of-python/010/src/calculator/: __main__.py  art.py  main.py  operations.py
100-days-of-python/011/: README.md  pyproject.toml
100-days-of-python/011/src/blackjack/: __main__.py  art.py  main.py  utils.py
100-days-of-python/012/: README.md  pyproject.toml
100-days-of-python/012/src/guess_number/: __main__.py  art.py  main.py  utils.py
100-days-of-python/013/: README.md
100-days-of-python/014/: README.md  pyproject.toml
100-days-of-python/014/src/higher_lower/: __main__.py  art.py  game_data.py  main.py  utils.py
100-days-of-python/015/: README.md  pyproject.toml
100-days-of-python/015/src/coffee_machine/: __main__.py  coffee_maker.py  main.py  menu.py  money_machine.py
100-days-of-python/016/: README.md
100-days-of-python/016/src/coffee_machine/: coffee_maker.py  main.py  menu.py  money_machine.py
100-days-of-python/017/: README.md  pyproject.toml
100-days-of-python/017/src/quiz/: __main__.py  data.py  main.py  question.py  quiz_brain.py
100-days-of-python/018/: README.md  pyproject.toml
100-days-of-python/018/src/hirst_painting/: __main__.py  data.py  main.py
100-days-of-python/019/: README.md  pyproject.toml
100-days-of-python/019/src/turtle_race/: __main__.py  main.py
100-days-of-python/020/: README.md  pyproject.toml
100-days-of-python/020/src/snake/: __main__.py  main.py  snake.py
100-days-of-python/021/: README.md  pyproject.toml
100-days-of-python/021/src/snake/: food.py  main.py  scoreboard.py  snake.py
100-days-of-python/022/: README.md  pyproject.toml
100-days-of-python/022/src/pong/: __main__.py  ball.py  main.py  paddle.py  scoreboard.py
100-days-of-python/023/: README.md  pyproject.toml
100-days-of-python/023/src/turtle_crossing/: __main__.py  car_manager.py  main.py  player.py  scoreboard.py
100-days-of-python/024/: README.md  pyproject.toml
100-days-of-python/024/input/templates/: template.txt
100-days-of-python/024/src/: mail_merge.py
100-days-of-python/025/: README.md  pyproject.toml
100-days-of-python/025/src/us_states_game/: __main__.py  main.py
100-days-of-python/026/: README.md  pyproject.toml
100-days-of-python/026/src/: nato_alphabet.py
100-days-of-python/027/: README.md  pyproject.toml
100-days-of-python/027/src/: mi_to_km.py
