[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = "Encodes and decodes using Caesar substitution cipher."
authors = ["LEN"]
readme = "README.md"
packages = [{ include = "caesar_cipher", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
caesar-cipher = "caesar_cipher.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
