[tool.poetry]
name = "higher-lower"
version = "0.1.0"
description = "A simple game to guess which random popular Instagram account has more followers."
authors = ["LEN"]
readme = "README.md"
packages = [{ include = "higher_lower", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
higher-lower = "higher_lower.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
