[tool.poetry]
name = "snake"
version = "0.1.0"
description = "The legendary Snake game"
authors = ["LEN"]
readme = "README.md"
packages = [{ include = "snake", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
snake = "snake.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
